fixed gaps in login form

--- a/client/src/components/pages/login-page/LoginPage.module.scss
+++ b/client/src/components/pages/login-page/LoginPage.module.scss
@@ -14,5 +14,6 @@
     background-color: white;
     padding: 3rem;
     border-radius: 20px;
+    gap: 2rem;
   }
 }
