--- a/client/src/components/pages/login-page/components/header-block/HeaderBlock.module.scss
+++ b/client/src/components/pages/login-page/components/header-block/HeaderBlock.module.scss
@@ -1,6 +1,6 @@
 .header-block {
     font-size: 2rem;
-    margin: 0 0 1.5rem 0;
+    margin: 0;
     text-transform: uppercase;
     color: #e50000;
 }
